force-app/main/default/objects/SopProduct__c/SopProduct__c.object-meta.xml
<CustomObject>
    <label>SOP Product</label>
    <nameField>
        <displayFormat>SOPP{000000}</displayFormat>
        <label>SOP Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOP Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>