force-app/main/default/objects/SopProduct__c/fields/IsSopActive__c.field-meta.xml
<CustomField>
    <fullName>IsSopActive__c</fullName>
    <formula>SOP__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SOP Active?</label>
    <type>Checkbox</type>
</CustomField>