force-app/main/default/objects/SopProduct__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <label>SOP</label>
    <referenceTo>SOP__c</referenceTo>
    <relationshipLabel>SOP Products</relationshipLabel>
    <relationshipName>SopProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>