force-app/main/default/objects/SopProduct__c/fields/SopName__c.field-meta.xml
<CustomField>
    <fullName>SopName__c</fullName>
    <formula>SOP__r.Name</formula>
    <label>SOP Name</label>
    <type>Text</type>
</CustomField>